# gnu_elklib

./: .dnt.db  .gitignore  .mailmap  .todo  Makefile.am  Makefile.sub  NEWS  THANKS  TODO  bootstrap  configure.ac  configure.ac.in  elklib-config-arch.in  elklib-config.in
docs/: .gitignore  ChangeLog-2008.0  Doxyfile.in  Makefile.am
docs/info/: .gitignore  Makefile.am  elklib.texi
inc/: .gitignore  Makefile.am  debug.h  elklib.h  elklib.h.in  externals.h
inc/libbfd/: bfd.h  elf-format.h  elf.h
inc/libc/: assert.h  bcd.h  ctype.h  endian.h  errno.h  execinfo.h  fcntl.h  float.h  heap.h  limits.h  malloc.h  math.h  mcheck.h  param.h  setjmp.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  types.h  unistd.h  values.h
inc/libc++/: algorithm  bitset  cassert  cctype  cerrno  cfloat  climits  cmath  cstdarg  cstddef  cstdint  cstdio  cstdlib  cstring  deque  exception  functional  iterator  limits  list  map  memory  mutex  new  numeric  pair  queue  set  slist  stack  stdexcept  string  thread  utility  vector
inc/libc++/bits/: char_traits  funct_exception  type_traits
inc/libc++x0/: mutex  thread
inc/libc/bits/: byteswap.h  dlfnc.h  endian.h  errno_values.h  fcntl.h  mman.h  values.h  wordsize.h
inc/libc/sys/: fcntl.h  ioctl.h  mman.h  stat.h
inc/libcompiler/: cdefs.h  compiler.h  consistency.h  cxxabi.h  demangle.h  linker.h  macro.h
inc/libm/: math.h
site/: Doxyfile  Makefile.am  footer.sxml  index.scm  pages.as  site.as
site/in/: .gitignore  Doxyfile.in  Makefile.am  development.scm  downloads.scm  footer.sxml  index.scm  installation.scm  pages.as  site.as.in
src/: .gitignore  Makefile.am  debug.h  elklib-config-arch.in  elklib-config.in
src/compiler/: Makefile.am  consistency.h  cxxabi.c  cxxabi.h  demangle.c  demangle.h  linker.h
src/libbfd/: bfd.c  elf.c
src/libc/: Makefile.am  assert.h  bcd.c  bcd.h  ctype.c  ctype.h  endian.h  errno.c  errno.h  execinfo.c  execinfo.h  fcntl.c  fcntl.h  glue.c  heap.h  limits.h  malloc.c  malloc.h  math.c  math.h  mcheck.c  mcheck.h  panic.c  param.h  setjmp.h  stdarg.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  time.c  time.h  types.h  unistd.c  unistd.h  values.h
src/libc++/: algorithm.cxx  bitset.cxx  cassert.cxx  cctype.cxx  cerrno.cxx  cfloat.cxx  climits.cxx  cmath.cxx  cstdarg.cxx  cstddef.cxx  cstdio.cxx  cstdlib.cxx  cstring.cxx  deque.cxx  exception.cxx  functional.cxx  glue.cxx  iterator.cxx  limits.cxx  list.cxx  map.cxx  memory.cxx  memory.hxx  new.cxx  numeric.cxx  queue.cxx  set.cxx  slist.cxx  stack.cxx  stdexcept.cxx  string.cxx  utility.cxx  vector.cxx
src/libc++/bits/: char_traits.cxx  funct_exception.cxx  type_traits.cxx
src/libc/bits/: byteswap.c  byteswap.h  dlfnc.h  errno_values.h  fcntl.h  mman.c  mman.h  wordsize.h
src/libc/sys/: fcntl.c  fcntl.h  ioctl.c  mman.c  mman.h  stat.c  stat.h
src/libcompiler/: Makefile.am  cdefs.h  compiler.h  cxxabi.c  cxxabi.h  demangle.c  demangle.h  eh_personality.cxx  intmath.c  linker.h  macro.h
src/libcompiler/demangle/: ansidecl.h  cp-demangle.c  cp-demangle.h  cplus-dem.c  demangle.h  libiberty.h  safe-ctype.c  safe-ctype.h  xmalloc.c
src/libm/: math.c
src/libterm/: README  teken.c  teken.h  teken_state.h
tests/: .gitignore  Makefile.am  test-c++-algorithm-1.cxx  test-c++-algorithm-2.cxx  test-c++-bitset-1.cxx  test-c++-clibrary-1.cxx  test-c++-deque-1.cxx  test-c++-exception-1.cxx  test-c++-functional-1.cxx  test-c++-iterator-1.cxx  test-c++-list-1.cxx  test-c++-map-1.cxx  test-c++-memory-1.cxx  test-c++-numeric-1.cxx  test-c++-queue-1.cxx  test-c++-set-1.cxx  test-c++-slist-1.cxx  test-c++-stack-1.cxx  test-c++-string-1.cxx  test-c++-vector-1.cxx
tools/: Makefile.am
tools/autotools/: .gitignore
tools/autotools/m4/: Makefile.am  ax_asm_uscore.m4  ax_blacklist_version.m4  ax_c___asm__.m4  ax_c___attribute___deprecated.m4  ax_c___attribute___noreturn.m4  ax_c___attribute___section.m4  ax_c___attribute___unused.m4  ax_c___builtin_expect.m4  ax_c_concatenation.m4  ax_c_empty_structs.m4  ax_c_var___date__.m4  ax_c_var___file__.m4  ax_c_var___function__.m4  ax_c_var___line__.m4  ax_c_var___pretty_func__.m4  ax_c_var___time__.m4  ax_gcc_install_dir.m4  ax_gcc_lib.m4  ax_gcc_libgcc_eh.m4  ax_gcc_libsupcxx.m4  ax_gcc_version.m4  ax_gxx_version.m4  ax_remove_forbidden.m4  ax_string_intersect.m4
tools/maint/: Makefile.am  wordwrap-detect.in
tools/scripts/: Makefile.am  externals.in  symbols.in  undefined-symbols.in
